--- a/Designpage1.html
+++ b/Designpage1.html
@@ -1,27 +1,103 @@
 <html>
-<head>
-	<link href="Dstyle.css" rel="stylesheet" />
-
-</head>
-<body>
-	<nav>
-		<ul id ="menu">
-			<li>
-				<a href="">Home</a>
-			</li>
-			<li>
-				<a href="">About</a>
-			</li>
-
-			<li>
-				<a href="">Blogs</a>
-			</li>
-	
-			<li>
-				<a href="">Contact us</a>
-			</li>
-		</ul>
-		</nav>
-	<section id="banner"></section>
-</body>
+    <head>
+        <link href="Dstyle.css" rel="stylesheet"/>
+    </head>
+    <body>
+        <header>
+            <marquee>
+            <p>
+               Todays offer on LED Sony get 10% cashback on HDFC credit card
+            </p>
+        </marquee>
+        </header>
+        <nav>
+            <ul id="menu">
+                <li><a href="home.html">Home</a> </li>
+                <li><a href="aboutus.html">About us</a> </li>
+                <li> <a href="">Blogs</a> </li>
+                <li><a href="">Contact us</a> </li>
+            </ul>
+        </nav>
+        <section id="banner">
+            <h1>Welcome to India's biggest sale</h1>
+        </section>
+        <section class="left-panel">
+            <ul>
+                <li>Furniture</li>
+                <li>Electronics</li>
+                <li>Mobile</li>
+                <li>Cloths</li>
+            </ul>
+        </section>
+        <section class="main-content">
+            <table>
+                <tr>
+                    <td>
+                        <img src="furniture1.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                    <td>
+                        <img src="furniture2.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                    <td>
+                        <img src="furniture3.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="mobile1.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                    <td>
+                        <img src="mobile2.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                    <td>
+                        <img src="mobile3.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <img src="cloths1.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                    <td>
+                        <img src="cloths2.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                    <td>
+                        <img src="cloths3.jpg"/>
+                        <p>
+                            Furniture 15000/-
+                        </p>
+                    </td>
+                </tr>
+            </table>
+        </section>
+        <footer class="footer">
+            <p>
+                &COPY;copy rights to e-comm website. powered by ThinkQ. Year 2022
+            </p>
+           
+        </footer>
+    </body>
 </html>
