--- a/Designpage1.html
+++ b/Designpage1.html
@@ -12,8 +12,8 @@
         </header>
         <nav>
             <ul id="menu">
-                <li><a href="home.html">Home</a> </li>
-                <li><a href="aboutus.html">About us</a> </li>
+                <li><a href="Designpage1.html">Home</a> </li>
+                <li><a href="">About us</a> </li>
                 <li> <a href="">Blogs</a> </li>
                 <li><a href="">Contact us</a> </li>
             </ul>
