--- a/Login.html
+++ b/Login.html
@@ -90,41 +90,70 @@
         </div>
     </div>
 
+    <div class="login">
+        <form>
 
 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-5">
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-5">
+
+                        <p>
+                            <i class="fa fa-envelope" aria-hidden="true"></i>
+                            <label for="exampleFormControlInput1" class="form-label">
+                                Email address
+                            </label>
+                            <input type="email" class="form-control" name="email" id="Input2" placeholder="name@example.com">
+                        </p>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <p>
+                            <i class="fa fa-unlock-alt" aria-hidden="true"></i>
+                            <label for="exampleFormControlInput1" class="form-label ">Password</label>
+                            <input type="password" class="form-control" name="password" id="Input3">
+                        </p>
+                    </div>
+
+                </div>
 
 
                 <p>
-                   
-                    <label for="exampleFormControlInput1" class="form-label">
-                        <i class="fa fa-envelope" aria-hidden="true"></i>
-                        Email address
-                    </label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                </p>
-
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <p>
-                    <i class="fa fa-unlock-alt" aria-hidden="true"></i>
-                    <label for="exampleFormControlInput1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleFormControlInput1">
+                    <button type="submit" value="login" class="btn btn-outline-primary"
+                            onclick="return validateUser()">
+                        Login
+                    </button>
                 </p>
             </div>
 
-        </div>
 
-
-        <input class="btn btn-primary" type="submit" value="Login">
+        </form>
     </div>
 
-    
+
+
+    <script>
+
+        function validateUser() {
+            // save email & pass which is entered in textboxes by the user
+            var emailId = document.getElementById("Input2").value;
+            var password = document.getElementById("Input3").value;
+            // get the email & pass from the localstorage
+            var email = localStorage.getItem("emailid");
+            var pass = localStorage.getItem("password");
+            if (emailId == email && password == pass) {
+                alert("Success !");
+                return true;
+            }
+            else {
+                alert("Fail to login");
+                return false;
+            }
+        }
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
