--- a/WebHome.html
+++ b/WebHome.html
@@ -27,6 +27,11 @@
             background-color: azure;
             margin: 50px;
         }
+        .carousel-item {
+            height: 60%;
+            width:100%;
+            
+        }
     
      </style>
 </head>
@@ -82,6 +87,40 @@
 
     <div class="container-fluid">
 
+
+
+
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="q3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="q1.jpg" class="d-block  w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="q2.jpg" class="d-block  w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="q4.jpg" class="d-block  w-100" alt="...">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="q5.jpg" class="d-block  w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <br>
         <div class="row">
             <div class="col-md-1">
                 <ul>
@@ -360,7 +399,12 @@
 
     <a class="btn btn-primary" href="WebDemo.html" role="button">BACK</a>
 
+    <footer class="footer">
+        <p>
+            &COPY;copy rights to e-comm website. powered by Meesho. Year 2022
+        </p>
 
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
