--- a/WebDemo.html
+++ b/WebDemo.html
@@ -1,32 +1,50 @@
 <html>
 <head>
-    <link href="WebDemo.css" rel="stylesheet" />
-    
-    <title> MEESHO</title>
-
-
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-
     <style>
+        .container {
+        }
+
+        .row {
+            margin-bottom: 10px;
+        }
+
+        img:hover {
+            height: 300px;
+            width: 300px;
+            cursor: pointer;
+        }
+
         .navbar-brand {
-            color: palevioletred;
-            text-shadow: 0 0 black;
-            text-decoration: blink;
+            color: coral;
+        }
+
+
+
+
+        body {
+            background-color: azure;
+            margin: 50px;
         }
 
         .carousel-item {
             height: 60%;
+            width: 100%;
         }
     </style>
-
 </head>
 
+
+
+
+
 <body>
+
+
+
 
 
     <nav class="navbar navbar-expand-lg bg-light">
@@ -68,37 +86,319 @@
 
 
 
+    <div class="container-fluid">
 
 
 
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="q3.jpg" class="d-block w-100" alt="...">
+
+
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="q3.jpg" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="q1.jpg" class="d-block  w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="q2.jpg" class="d-block  w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="q4.jpg" class="d-block  w-100" alt="...">
+                </div>
+
+                <div class="carousel-item">
+                    <img src="q5.jpg" class="d-block  w-100" alt="...">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="q1.jpg" class="d-block  w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="q2.jpg" class="d-block  w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="q4.jpg" class="d-block  w-100" alt="...">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <br>
+        <div class="row">
+            <div class="col-md-1">
+                <ul>
+                    <li>Womens FootWear</li>
+                    <li>Mobile</li>
+                    <li>Furniture</li>
+                    <li>Cloths</li>
+                </ul>
             </div>
 
-            <div class="carousel-item">
-                <img src="q5.jpg" class="d-block  w-100" alt="...">
+            <div class="col-md-11">
+
+                <div class="row">
+                    <div class="col-md-4">
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="f1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Fashion slipper</h5>
+                                <p class="card-text">Starting from 149 to 500</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="f2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Casual Shoes</h5>
+                                <p class="card-text">Under 449rs Only</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="f3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Heels</h5>
+                                <p class="card-text">Under 449 Rs Only</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+
+
+
+        <div class="row">
+            <div class="col-md-1">
+
+
+
+
+            </div>
+
+            <div class="col-md-11">
+
+                <div class="row">
+                    <div class="col-md-3">
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="mobile1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Real me Narzo50</h5>
+                                <p class="card-text">
+                                    Helio G96 Gaming Processor<br>
+                                    120Hz Ultra Smooth Display<br>
+                                    50MP AI Triple Camera
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="mobile2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">iPhone 12</h5>
+                                <p class="card-text">
+                                    6.1-inch-Super Retina XDR display<br>
+                                    Advance dual-camera system
+
+
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="mobile3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Tecno 8T Satring 8,369</h5>
+                                <p class="card-text">
+                                    7GB Expandable Ram<br>
+                                    50MP AI Camera<br>
+                                    6.6-inch FHD +display
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="mobile1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Real me Narzo10</h5>
+                                <p class="card-text">
+                                    Helio G96 Gaming Processor<br>
+                                    120Hz Ultra Smooth Display<br>
+                                    50MP AI Triple Camera
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+
+        <div class="row">
+            <div class="col-md-1">
+
+            </div>
+
+            <div class="col-md-11">
+
+                <div class="row">
+                    <div class="col-md-4">
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="s1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Womens Saree</h5>
+                                <p class="card-text">Under 399 Only</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="s2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Womens Top And Tshirts</h5>
+                                <p class="card-text">Pair of 3 Tshirts in 499 </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="s3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Womens Kurti</h5>
+                                <p class="card-text">Kurti set in 600</p>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+        <div class="row">
+            <div class="col-md-1">
+
+
+
+
+            </div>
+
+            <div class="col-md-11">
+
+                <div class="row">
+                    <div class="col-md-3">
+
+                        <div class="card" style="width: 18rem;">
+                            <img src="m1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">MakeUp Bratellers</h5>
+                                <p class="card-text">
+                                    UpTo 25% off<br>
+                                    Lorial Paris<br>
+                                    Deal of the Day
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="m2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Bags</h5>
+                                <p class="card-text">
+                                    Great Deals on Wallets ,Combos &Aacute; Messanger Bags<br>
+                                    Price 500Rs
+
+
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="m3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Watch</h5>
+                                <p class="card-text">
+                                    Stylish Anguler Watches from Fossil<br>
+                                    Price 999Rs<br>
+
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-3">
+                        <div class="card" style="width: 18rem;">
+                            <img src="m4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <h5 class="card-title">Wallets</h5>
+                                <p class="card-text">
+                                    Great Deals on Wallets ,Combos & Messanger Bags<br>
+                                    Price 449RS<br>
+
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
     </div>
+
+
 
     <footer class="footer">
         <p>
@@ -106,11 +406,11 @@
         </p>
 
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 
-</body>
 
+
+</body>
 </html>
